# libsignalfd

./: .gitignore  ChangeLog  INSTALL  Makefile.am  README  README.md  configure.ac  signalfd.pc.in
src/: Makefile.am  signalfd.c  syscall.h
tests/: Makefile.am  test_signalfd.c
